Реализация аналогичной логики для Post